fixed footer overlapping

--- a/rumblechart/rumblestyle.css
+++ b/rumblechart/rumblestyle.css
@@ -25,11 +25,9 @@ a {
     font-size: medium;
     color: #888; }
 a.guide {
-    position: fixed;
-    bottom: 10%;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    font-size: larger;
+    position: relative;
+    bottom: 0%; left: 0%;
+    font-size: large;
     color: #aaa; }
 #contain {
     position: fixed;
